src/z80asm/z80asm2/t/30-directive/expected/ifdef_11.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/30-directive//input/ifdef_11.asm
Assembling t/30-directive/input/ifdef_11.asm...
t/30-directive/input/ifdef_11.asm:1:7: error: Expected identifier after IFDEF
    #ifdef ; no symbol
          ^
t/30-directive/input/ifdef_11.asm:3:8: error: Expected identifier after IFDEF
    #ifdef 23 ; no symbol
           ^
t/30-directive/input/ifdef_11.asm:5:10: error: Unexpected token after IFDEF: extra
    #ifdef X extra ; extra input
             ^
t/30-directive/input/ifdef_11.asm:7:2: error: Unexpected ELSE directive without matching IF
    #else ; else without if
     ^
t/30-directive/input/ifdef_11.asm:8:2: error: Unexpected ELSEIFDEF directive without matching IF
    #elseifdef ; elseifdef without if
     ^
t/30-directive/input/ifdef_11.asm:9:2: error: Unexpected ELIFDEF directive without matching IF
    #elifdef ; elifdef without if
     ^
t/30-directive/input/ifdef_11.asm:10:2: error: Unexpected ENDIF directive without matching IF
    #endif ; endif without if
     ^
t/30-directive/input/ifdef_11.asm:13:2: error: Multiple ELSE in IF block
    #else ; two elses
     ^
t/30-directive/input/ifdef_11.asm:17:2: error: Unexpected ELSEIFDEF directive after ELSE
    #elseifdef ; elseifdef after else
     ^
t/30-directive/input/ifdef_11.asm:21:2: error: Unexpected ELIFDEF directive after ELSE
    #elifdef ; elifdef after else
     ^
# file: t/30-directive/input/ifdef_11.asm
EndOfLine	"\n"	23:1	
